force-app/main/default/objects/Krow__Survey_Question__c/Krow__Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Klient Survey Question</label>
    <nameField>
        <displayFormat>SQ-{000}</displayFormat>
        <label>Survey Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>