force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Category__c.field-meta.xml
<CustomField>
    <fullName>Krow__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Krow__Category</valueSetName>
    </valueSet>
</CustomField>