force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Krow__Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>