force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Question_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Krow__Question_Rich_Text__c</fullName>
    <label>Question Rich Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>