force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>Krow__Rating_Scale__c</fullName>
    <label>Rating Scale</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>