force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Required__c.field-meta.xml
<CustomField>
    <fullName>Krow__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>