force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sequence__c</fullName>
    <description>Question order in survey</description>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>