force-app/main/default/objects/Krow__Survey_Question__c/fields/Krow__Survey__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>Krow__Survey__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>Survey_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>